feat: обновление моделей, сервисов и хэндлеров для связи задач и пользователей
